--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -3,12 +3,24 @@
 	--pink: #ff548a;
 	--blue: #00dddd;
 	--yellow: #ffcc49;
+	--darkyellow: #f9ba10;
 	--brown: #854d0e;
 	--purple: #9361ff;
 	--red: #ff422f;
+	--orange: #ff914d;
 	--green: #00bb35;
-	--darkblue: #4CB5FD;
+	--darkblue: #4cb5fd;
 	--white: #fafaf4;
-	--grey: #bbbbbb;
-	--darkgrey: #666666;
+	--gray: #bbbbbb;
+	--darkgray: #666666;
+
+	--background: #282c34;
+	--h1: #ff548a;
+	--h2: #ffcc49;
+	--h3: #fafaf4;
+	--txt: #fafaf4;
+	--txt-navbar: #fafaf4;
+	--txt-orange: #ff914d;
+	--txt-blue: #00dddd;
+	--txt-42: #5efdff;
 }
