--- a/css/themes/light.css
+++ b/css/themes/light.css
@@ -1,14 +1,25 @@
 :root {
-	--gray: #282c34;
+	--black: #282c34;
 	--pink: #ff548a;
 	--blue: #00dddd;
 	--yellow: #ffcc49;
 	--brown: #854d0e;
 	--purple: #9361ff;
 	--red: #ff422f;
+	--orange: #ff914d;
 	--green: #00bb35;
-	--darkblue: #0166f1;
+	--darkblue: #4cb5fd;
 	--white: #fafaf4;
-	--grey: #bbbbbb;
-	--darkgrey: #666666;
+	--gray: #bbbbbb;
+	--darkgray: #666666;
+
+	--background: #fafaf4;
+	--h1: #ff548a;
+	--h2: #ffcc49;
+	--h3: #282c34;
+	--txt: #282c34;
+	--txt-navbar: #fafaf4;
+	--txt-orange: #ff914d;
+	--txt-blue: #00dddd;
+	--txt-42: #5efdff;
 }
